added iAmThirsty function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <body>
         <h1>js strings objects</h1>
 
+        <div id="printDiv">
+            
+        </div>
+
         <script src="./main.js"></script>
     </body>
 </html>
