working with objects

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             
         </div>
 
+        <div id="objectDiv"></div>
+
         <script src="./main.js"></script>
     </body>
 </html>
